# editorconfig-git-preserve-history

./: .gitignore  .travis.yml  Change.py  README.md  README.rst  changewhitespace.py  clone-test.sh  dev-requirements.txt  editorconfig-git-preserve-history.py  editorconfig-preserve-history.py  gitcommit.py  gitinfo.php  requirements.txt  run_tests.sh  setup.cfg  setup.py  test_gitcommit.py  test_util.py  util.py
.travis-scripts/: clone-test.sh
editorconfig_git_preserve_history/: __init__.py  __main__.py  change.py  git.py  gitcommit.py  gitfiles.py  gitstatus.py  main.py  replace.py  test_util.py  util.py
editorconfig_git_preserve_history/tests/: test_git.py  test_gitcommit.py  test_replace.py  test_util.py
editorconfig_git_preserve_history/tests/data/change-newlines/: editorconfig.json
editorconfig_git_preserve_history/tests/data/non-utf8/: editorconfig.json  input.txt  output.txt
editorconfig_git_preserve_history/tests/data/tinymce-changelog/: editorconfig.json  output.txt
editorconfig_git_preserve_history/tests/data/utf8/: input.txt  output.txt
