[metadata]
name = EditorConfigGitPreserveHistory
author = David Meybohm
author_email = dmeybohm@gmail.com
license = MIT
description = Commit changes from editorconfig and preserve authorship
url = http://github.com/dmeybohm/editorconfig-git-preserve-history
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = editorconfig_git_preserve_history
install_requires = EditorConfig>=0.12.1; dateutil
test_suite = nose.collector
tests_require = nose

[options.entry_points]
console_scripts = 
    editorconfig-git-preserve-history = editorconfig_git_preserve_history.__main__:find_and_write_commits
